# LLLVM

./: .gitignore  CMakeLists.txt  README.md
include/Analysis/: DominatorTreeAnalysis.h
include/Optimizations/: CommonSubexpressionElimination.h  GVNPRE.h  LICM.h  LoopStrengthReduction.h  LoopUnswitching.h  TailRecursionElimination.h
include/analysis/: DominatorTreeAnalysis.h
include/optimizations/: CommonSubexpressionElimination.h  DeadCodeElimination.h  SparseConditionalConstantPropagation.h
include/support/: DominatorTree.h
lib/: CMakeLists.txt  PassRegistration.cpp
lib/Analysis/: DominatorTreeAnalysis.cpp
lib/Optimizations/: CMakeLists.txt  CommonSubexpressionElimination.cpp  DeadCodeElimination.cpp  GVNPRE.cpp  LICM.cpp  LoopStrengthReduction.cpp  LoopUnswitching.cpp  SparseConditionalConstantPropagation.cpp  TailRecursionElimination.cpp
lib/Support/: CMakeLists.txt  DominatorTree.cpp
lib/analysis/: CMakeLists.txt  DominatorTreeAnalysis.cpp
lib/optimizations/: CMakeLists.txt  CommonSubexpressionElimination.cpp  DeadCodeElimination.cpp  SparseConditionalConstantPropagation.cpp
lib/support/: DominatorTree.cpp
test/: CMakeLists.txt
test/Analysis/: DominatorTreeAnalysis.ll
test/CommonSubexpressionElimination/: basic-available.ll  basic-unordered.ll  basic.ll
test/DeadCodeElimination/: basic.ll  remove-chain.ll
test/Optimizations/CommonSubexpressionElimination/: basic.ll
test/Optimizations/GVNPRE/: basic-gvn.ll  (+5 more)
test/SparseConditionalConstantPropagation/: apint-basictest.ll  loop.ll  remove-dead-false-block.ll  remove-dead-true-block.ll
(+12 files in other folders)
